[package]
name = "rfs_tester"
version = "0.1.4"
authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
edition = "2018"
repository = "https://github.com/greyshaman/rfs_tester"
homepage = "https://github.com/greyshaman/rfs_tester"
keywords = ["test", "file", "directory"]
categories = ["filesystem"]
readme = "README.md"
license = "MIT"
description = """
This package allows you to prepare a temporary directory for testing, 
conduct testing related to file operations and after tests are completed, 
delete this test directory.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
serde_yaml = "0.8.17"
