[package]
name = "rfs_tester"
version = "1.1.1"
authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
edition = "2021"
repository = "https://github.com/greyshaman/rfs_tester"
homepage = "https://github.com/greyshaman/rfs_tester"
keywords = ["test", "file", "directory", "sandbox"]
categories = ["filesystem", "development-tools::testing"]
readme = "README.md"
license = "MIT"
description = """
This package allows you to create a temporary directory for testing purposes.
You can use it to perform tests related to file operations.
After the tests are finished, the temporary directory will be deleted automatically.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs_test_macro = "1.1.1"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
walkdir = "2.5.0"
